--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5000
 MONGODB_URI="mongodb+srv://mohitAgrawal:Mohit0412@auratrackercluster0.856q7.mongodb.net/Student?retryWrites=true&w=majority&appName=AuraTrackerCluster0"
 JWT_SECRET=your_jwt_secret
+ADMIN_EMAIL="abc@gmail.com"
+ADMIN_PASSWORD="abc"
