adding more functionalities like manage teachers edit delete, student management by admin and making some changes in UI theme designing

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI="mongodb+srv://mohitAgrawal:Mohit0412@auratrackercluster0.856q7.mongodb.net/Student?retryWrites=true&w=majority&appName=AuraTrackerCluster0"
+MONGODB_URI="mongodb+srv://rtlavkush07:qHl7o4VZ5bgyMUi2@cluster0.swhoise.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET=your_jwt_secret
-ADMIN_EMAIL="abc@gmail.com"
-ADMIN_PASSWORD="abc"
+ADMIN_EMAIL="admin@gmail.com"
+ADMIN_PASSWORD="admin"
